fix: enhance image plugin options and improve font handling; update animations for better visibility and perf, copywriting

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -4,9 +4,9 @@
 
 :root {
   color-scheme: light dark;
-  --font-body: 'PPSupplyMono', monospace;;
-  --font-sans: 'PPSupplySans', monospace;
-
+  --font-body: 'PPSupplyMono', monospace;
+  --font-sans: 'PPSupplySans', system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+  --font-mono: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
   --background-color: #e3e5e2;
   --background-bright-color: #fefefe;
   --text-color: #333;
@@ -23,8 +23,6 @@
   --font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.67rem);
   --font-size-lg: clamp(1.3rem, 1vw + 1rem, 1.8rem);
   --font-size-xl: clamp(1.5rem, 1.56vw + 1.2rem, 2.2rem);
-  --font-size-xxl: clamp(1.8rem, 2.38vw + 1.5rem, 2.8rem);
-  
   --font-size-xxl: clamp(2.5rem, calc(100svw / 7.8), 8.75rem);
   /* Subtitle (Front-end Designer & Developer) fluid size */
   --font-size-subtitle: clamp(1.1rem, calc(100svw / 27.3), 2rem);
@@ -36,19 +34,10 @@ html.dark {
   --background-bright-color: #211e1e;
   --text-color: #f0f0f0;
   --link-color: #8ab4f8;
-  --border-color: #444;
   --link-hover-bg: #f000c1;
   --border-color: #3f3939;
   --shadow-color: rgba(0, 0, 0, 0.3);
   --text-em: 240, 0, 193;
-}
-
-@font-face {
-  font-family: 'PPSupplyMono';
-  src: url('../fonts/subset-PPSupplyMono-Regular.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
 }
 
 @font-face {
@@ -59,8 +48,15 @@ html.dark {
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'PPSupplyMono';
+  src: url('../fonts/subset-PPSupplyMono-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 body {
-  font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
   font-family: var(--font-body);
   font-size: var(--font-size-base);
   line-height: 1.6;
@@ -76,7 +72,7 @@ p {
   line-height: 1.35;
   max-width: 80ch;
 
-  font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
+  font-family: var(--font-mono);
   font-weight: normal;
 }
 
@@ -96,17 +92,17 @@ h6 {
 }
 
 .title {
-  font-family: var(--font-mono);
+  font-family: var(--font-body);
   font-size: var(--font-size-subtitle);
   margin-top: var(--spacing-unit);
   margin-bottom: calc(-1 * var(--spacing-unit));
   line-height: 1;
   text-transform: uppercase;
-  opacity: 0; /* Hide initially to prevent flash */
+  opacity: 1; /* Hide initially to prevent flash */
 }
 
 h1 {
-  /* visibility: hidden; Hide initially to prevent flash */
+  opacity: 1;
 }
 
 .signature {
@@ -549,7 +545,7 @@ body.view-transition-active main {
 .works-h2 {
   margin: 0;
   padding: var(--spacing-unit) 0;
-  font-family: var(--font-mono);
+  font-family: var(--font-body);
   font-size: var(--font-size-md);
   line-height: 1;
   text-transform: uppercase;
@@ -574,7 +570,7 @@ body.view-transition-active main {
   
   display: grid;
   grid-template-columns: 200px 2fr 2fr; /* h2 takes left half, meta on right */
-  gap: var(--spacing-unit);
+  gap: 0 var(--spacing-unit);
   align-items: baseline;
   
   text-decoration: none;
@@ -608,7 +604,7 @@ body.view-transition-active main {
   justify-self: end;
   text-align: right;
 
-  opacity: .6;
+  opacity: .8;
 }
 
 .works-year {
@@ -619,7 +615,7 @@ body.view-transition-active main {
 
 .works-year,
 .works-role {
-  font-family: var(--font-mono);
+  font-family: var(--font-body);
   font-size: 0.9em;
 }
 
